@@ -4,6 +4,7 @@
   BC: has_access_to_limitation now has a fourth parameter 'debug', that needs to be true to get debug
       on unmatched policy's
 - Added a fourth parameter on ezjscore/call to be able to enable debug in response
+- Make ezjscServerRouter use hasAccessToLimitation to support multiple policies
 
 
 
